--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
         <div class="botones"></div>
         <div class="botones"></div>
     </div>
-    <div class="cola"></div>
+    <div class="cola">
+        <h5>
+            HECHO POR: JOSE ALONZO 
+            RIVERA MAMANI, 6986777
+        </h5>
+    </div>
 </body>
 </html>
